[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Sprites/Misc/Pointer.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Codes/Gallery.gd" type="Script" id=3]
[ext_resource path="res://Assets/Shaders/Shader 2.gdshader" type="Shader" id=4]
[ext_resource path="res://Assets/Scenes/Misc/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/Misc/Drawings.png" type="Texture" id=6]
[ext_resource path="res://Assets/SFX/MenuSelected.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Music/Happy Memories.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sprites/Misc/CharacterBio.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Misc/Concepts.png" type="Texture" id=12]

[sub_resource type="Gradient" id=75]
offsets = PoolRealArray( 0.192661, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=74]
gradient = SubResource( 75 )

[sub_resource type="ShaderMaterial" id=76]
shader = ExtResource( 4 )
shader_param/gradient = SubResource( 74 )

[sub_resource type="Animation" id=1]
resource_name = "Pointers"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Doodles:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/Doodles/Title:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -368, -120 ), Vector2( -368, -112 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animation/Border:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 76, 48 ), Vector2( 76, 50 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation/PointerLeft:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 152 ), Vector2( 67, 152 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Animation/PointerRight:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 174 ), Vector2( 445, 174 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Animation/Character:offset")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Animation/Concept:offset")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Animation/Character/Title:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -368, -120 ), Vector2( -368, -112 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Animation/Concept/Title:rect_position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -368, -120 ), Vector2( -368, -112 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Animation/PointerDown:rect_position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 248, 248 ), Vector2( 248, 250 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Animation/PointerUp:rect_position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 264, 48 ), Vector2( 264, 53 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Doodles:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/Doodles/Title:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animation/Border:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 76, 50 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation/PointerRight:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 445, 184 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Animation/PointerLeft:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 67, 152 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Animation/Character:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Animation/Concept:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Animation/Character/Title:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -360, -112 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Animation/Concept/Title:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -360, -112 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Animation/PointerDown:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 248, 250 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Animation/PointerUp:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 264, 53 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=77]

[sub_resource type="StyleBoxEmpty" id=78]

[sub_resource type="StyleBoxEmpty" id=79]

[sub_resource type="StyleBoxEmpty" id=80]

[sub_resource type="StyleBoxEmpty" id=81]

[sub_resource type="StyleBoxEmpty" id=82]

[sub_resource type="StyleBoxEmpty" id=83]

[sub_resource type="StyleBoxEmpty" id=84]

[sub_resource type="StyleBoxEmpty" id=85]

[sub_resource type="StyleBoxEmpty" id=86]

[node name="Gallery" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 528.0
margin_bottom = 316.0
color = Color( 0.764706, 0.776471, 1, 1 )

[node name="White" type="ColorRect" parent="Background"]
margin_right = 544.0
margin_bottom = 160.0

[node name="FadeUp" type="ColorRect" parent="Background"]
material = SubResource( 76 )
margin_left = 544.0
margin_top = 152.0
margin_right = 567.0
margin_bottom = 696.0
rect_rotation = 90.0

[node name="Transition" parent="." instance=ExtResource( 5 )]

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Pointers"
anims/Pointers = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Border" type="ColorRect" parent="Animation"]
margin_left = 76.0
margin_top = 50.0
margin_right = 436.0
margin_bottom = 257.995
color = Color( 0, 0, 0, 1 )

[node name="Doodles" type="Sprite" parent="Animation"]
position = Vector2( 256, 152 )
texture = ExtResource( 6 )
offset = Vector2( 0, 2 )
hframes = 8

[node name="Title" type="Label" parent="Animation/Doodles"]
anchor_left = 0.171875
anchor_top = 0.773333
anchor_right = 0.816406
anchor_bottom = 0.773333
margin_top = 34.0
margin_right = 738.875
margin_bottom = 60.0022
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Creator"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Character" type="Sprite" parent="Animation"]
position = Vector2( 256, 496 )
texture = ExtResource( 11 )
offset = Vector2( 0, 2 )
hframes = 3

[node name="Title" type="Label" parent="Animation/Character"]
anchor_left = 0.171875
anchor_top = 0.773333
anchor_right = 0.816406
anchor_bottom = 0.773333
margin_left = -360.0
margin_top = -112.0
margin_right = 378.875
margin_bottom = -85.999
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Characters"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Concept" type="Sprite" parent="Animation"]
position = Vector2( 256, 496 )
texture = ExtResource( 12 )
offset = Vector2( 0, 2 )

[node name="Title" type="Label" parent="Animation/Concept"]
anchor_left = 0.171875
anchor_top = 0.773333
anchor_right = 0.816406
anchor_bottom = 0.773333
margin_left = -360.0
margin_top = -112.0
margin_right = 378.875
margin_bottom = -85.999
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Concepts"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PointerLeft" type="Button" parent="Animation"]
margin_left = 67.0
margin_top = 152.0
margin_right = 95.0
margin_bottom = 174.0
rect_rotation = 89.9999
custom_styles/hover = SubResource( 77 )
custom_styles/pressed = SubResource( 78 )
custom_styles/focus = SubResource( 79 )
custom_styles/disabled = SubResource( 80 )
custom_styles/normal = SubResource( 81 )
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="PointerRight" type="Button" parent="Animation"]
margin_left = 445.0
margin_top = 184.0
margin_right = 473.0
margin_bottom = 206.0
rect_rotation = -89.9999
custom_styles/hover = SubResource( 82 )
custom_styles/pressed = SubResource( 83 )
custom_styles/focus = SubResource( 84 )
custom_styles/disabled = SubResource( 85 )
custom_styles/normal = SubResource( 86 )
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="PointerDown" type="Button" parent="Animation"]
margin_left = 248.0
margin_top = 250.0
margin_right = 264.0
margin_bottom = 272.002
custom_styles/hover = SubResource( 82 )
custom_styles/pressed = SubResource( 83 )
custom_styles/focus = SubResource( 84 )
custom_styles/disabled = SubResource( 85 )
custom_styles/normal = SubResource( 86 )
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="PointerUp" type="Button" parent="Animation"]
margin_left = 264.0
margin_top = 53.0
margin_right = 280.0
margin_bottom = 75.0003
rect_rotation = -180.0
custom_styles/hover = SubResource( 82 )
custom_styles/pressed = SubResource( 83 )
custom_styles/focus = SubResource( 84 )
custom_styles/disabled = SubResource( 85 )
custom_styles/normal = SubResource( 86 )
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="Tween" type="Tween" parent="."]

[node name="Selecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "SFX"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true
bus = "Music"

[connection signal="animation_finished" from="Transition/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="pressed" from="Animation/PointerLeft" to="." method="_on_PointerLeft_pressed"]
[connection signal="pressed" from="Animation/PointerRight" to="." method="_on_PointerRight_pressed"]
[connection signal="pressed" from="Animation/PointerDown" to="." method="_on_PointerDown_pressed"]
[connection signal="pressed" from="Animation/PointerUp" to="." method="_on_PointerUp_pressed"]

[editable path="Transition"]
